cleaned the data

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
    "id": "968cc7d3-56ad-4f85-ad44-71318c71219f",
    "metadata": {},
    "outputs": [],
@@ -877,16 +877,13 @@
     "# Set the DataFrame index to match the original data index\n",
     "data_dtm.index = data_clean.index\n",
     "\n",
-    "# Get feature names using the vocabulary_ attribute\n",
-    "feature_names = list(vectorizer.vocabulary_.keys())\n",
-    "\n",
-    "# Set the DataFrame columns to be the feature names\n",
-    "data_dtm.columns = feature_names"
+    "# Set the DataFrame columns to be the feature names (terms) extracted by the vectorizer\n",
+    "data_dtm.columns = vectorizer.get_feature_names_out()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "id": "8a265116-a56c-4f05-a0e1-4272678d0a58",
    "metadata": {},
    "outputs": [
@@ -896,7 +893,7 @@
        "(9, 6507)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
